Finalize version 2.0